--- a/project-requirements.json
+++ b/project-requirements.json
@@ -7,7 +7,6 @@
         "hanafalah/laravel-permission": "1.x-dev as 1.0",
         "hanafalah/laravel-stub": "1.x-dev as 1.0",
         "hanafalah/laravel-support": "1.x-dev as 1.0",
-        "hanafalah/microtenant": "1.x-dev as 1.0",
         "hanafalah/module-encoding": "1.x-dev as 1.0",
         "hanafalah/module-regional": "1.x-dev as 1.0",
         "hanafalah/module-user": "1.x-dev as 1.0",
@@ -42,6 +41,7 @@
         "hanafalah/module-physical-examination": "1.x-dev as 1.0",
         "hanafalah/module-opname-stock": "1.x-dev as 1.0",
         "hanafalah/module-distribution": "1.x-dev as 1.0",
-        "hanafalah/module-pharmacy": "1.x-dev as 1.0"
+        "hanafalah/module-pharmacy": "1.x-dev as 1.0",
+        "hanafalah/module-tax": "1.x-dev as 1.0"
     }
 }
