--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
             "Hanafalah\\KlinikStarterpack\\": "src/"
         },
         "files":[
-            "src/helpers.php"
+            "src/helper.php"
         ]
     },
     "authors": [
