--- a/project-requirements.json
+++ b/project-requirements.json
@@ -1,55 +1,55 @@
 {
     "require": {
-        "hanafalah/api-helper": "1.x-dev as 1.0",
-        "hanafalah/laravel-feature": "1.x-dev as 1.0",
-        "hanafalah/laravel-has-props": "1.x-dev as 1.0",
-        "hanafalah/laravel-package-generator": "1.x-dev as 1.0",
-        "hanafalah/laravel-permission": "1.x-dev as 1.0",
-        "hanafalah/laravel-stub": "1.x-dev as 1.0",
-        "hanafalah/laravel-support": "1.x-dev as 1.0",
-        "hanafalah/module-encoding": "1.x-dev as 1.0",
-        "hanafalah/module-regional": "1.x-dev as 1.0",
-        "hanafalah/module-user": "1.x-dev as 1.0",
-        "hanafalah/module-workspace": "1.x-dev as 1.0",
-        "hanafalah/module-patient": "1.x-dev as 1.0",
-        "hanafalah/module-agent": "1.x-dev as 1.0",
-        "hanafalah/module-employee": "1.x-dev as 1.0",
-        "hanafalah/module-funding": "1.x-dev as 1.0",
-        "hanafalah/module-lab-radiology": "1.x-dev as 1.0",
-        "hanafalah/module-medic-service": "1.x-dev as 1.0",
-        "hanafalah/module-medical-treatment": "1.x-dev as 1.0",
-        "hanafalah/module-organization": "1.x-dev as 1.0",
-        "hanafalah/module-payer": "1.x-dev as 1.0",
-        "hanafalah/module-people": "1.x-dev as 1.0",
-        "hanafalah/module-profession": "1.x-dev as 1.0",
-        "hanafalah/module-service": "1.x-dev as 1.0",
-        "hanafalah/module-summary": "1.x-dev as 1.0",
-        "hanafalah/module-transaction": "1.x-dev as 1.0",
-        "hanafalah/module-treatment": "1.x-dev as 1.0",
-        "hanafalah/module-warehouse": "1.x-dev as 1.0",
-        "hanafalah/module-class-room": "1.x-dev as 1.0",
-        "hanafalah/module-mcu": "1.x-dev as 1.0",
-        "hanafalah/module-item": "1.x-dev as 1.0",
-        "hanafalah/module-medical-item": "1.x-dev as 1.0",
-        "hanafalah/module-examination": "1.x-dev as 1.0",
-        "hanafalah/module-procurement": "1.x-dev as 1.0",
-        "hanafalah/module-medical-procurement": "1.x-dev as 1.0",
-        "hanafalah/module-disease": "1.x-dev as 1.0",
-        "hanafalah/module-informed-consent": "1.x-dev as 1.0",
-        "hanafalah/module-icd": "1.x-dev as 1.0",
-        "hanafalah/module-anatomy": "1.x-dev as 1.0",
-        "hanafalah/module-physical-examination": "1.x-dev as 1.0",
-        "hanafalah/module-opname-stock": "1.x-dev as 1.0",
-        "hanafalah/module-distribution": "1.x-dev as 1.0",
-        "hanafalah/module-pharmacy": "1.x-dev as 1.0",
-        "hanafalah/module-rencana-anggaran": "1.x-dev as 1.0",
-        "hanafalah/module-event": "1.x-dev as 1.0",
-        "hanafalah/module-manufacture": "1.x-dev as 1.0",
-        "hanafalah/module-handwriting": "1.x-dev as 1.0",
-        "hanafalah/puskesmas-asset": "1.x-dev as 1.0",
-        "hanafalah/module-payment": "1.x-dev as 1.0",
-        "hanafalah/module-card-identity": "1.x-dev as 1.0",
-        "hanafalah/module-support": "1.x-dev as 1.0",
-        "hanafalah/module-tax": "1.x-dev as 1.0"
+        "hanafalah/api-helper": "dev-main",
+        "hanafalah/laravel-feature": "dev-main",
+        "hanafalah/laravel-has-props": "dev-main",
+        "hanafalah/laravel-package-generator": "dev-main",
+        "hanafalah/laravel-permission": "dev-main",
+        "hanafalah/laravel-stub": "dev-main",
+        "hanafalah/laravel-support": "dev-main",
+        "hanafalah/module-encoding": "dev-main",
+        "hanafalah/module-regional": "dev-main",
+        "hanafalah/module-user": "dev-main",
+        "hanafalah/module-workspace": "dev-main",
+        "hanafalah/module-patient": "dev-main",
+        "hanafalah/module-agent": "dev-main",
+        "hanafalah/module-employee": "dev-main",
+        "hanafalah/module-funding": "dev-main",
+        "hanafalah/module-lab-radiology": "dev-main",
+        "hanafalah/module-medic-service": "dev-main",
+        "hanafalah/module-medical-treatment": "dev-main",
+        "hanafalah/module-organization": "dev-main",
+        "hanafalah/module-payer": "dev-main",
+        "hanafalah/module-people": "dev-main",
+        "hanafalah/module-profession": "dev-main",
+        "hanafalah/module-service": "dev-main",
+        "hanafalah/module-summary": "dev-main",
+        "hanafalah/module-transaction": "dev-main",
+        "hanafalah/module-treatment": "dev-main",
+        "hanafalah/module-warehouse": "dev-main",
+        "hanafalah/module-class-room": "dev-main",
+        "hanafalah/module-mcu": "dev-main",
+        "hanafalah/module-item": "dev-main",
+        "hanafalah/module-medical-item": "dev-main",
+        "hanafalah/module-examination": "dev-main",
+        "hanafalah/module-procurement": "dev-main",
+        "hanafalah/module-medical-procurement": "dev-main",
+        "hanafalah/module-disease": "dev-main",
+        "hanafalah/module-informed-consent": "dev-main",
+        "hanafalah/module-icd": "dev-main",
+        "hanafalah/module-anatomy": "dev-main",
+        "hanafalah/module-physical-examination": "dev-main",
+        "hanafalah/module-opname-stock": "dev-main",
+        "hanafalah/module-distribution": "dev-main",
+        "hanafalah/module-pharmacy": "dev-main",
+        "hanafalah/module-rencana-anggaran": "dev-main",
+        "hanafalah/module-event": "dev-main",
+        "hanafalah/module-manufacture": "dev-main",
+        "hanafalah/module-handwriting": "dev-main",
+        "hanafalah/puskesmas-asset": "dev-main",
+        "hanafalah/module-payment": "dev-main",
+        "hanafalah/module-card-identity": "dev-main",
+        "hanafalah/module-support": "dev-main",
+        "hanafalah/module-tax": "dev-main"
     }
 }
