--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         }
     },
     "require": {
-        "hanafalah/laravel-support": "dev-main",
-        "hanafalah/microtenant": "dev-main"
+        "hanafalah/laravel-support": "1.x-dev as 1.0",
+        "hanafalah/microtenant": "1.x-dev as 1.0"
     }
 }
