--- a/project-requirements.json
+++ b/project-requirements.json
@@ -47,6 +47,7 @@
         "hanafalah/module-manufacture": "1.x-dev as 1.0",
         "hanafalah/module-handwriting": "1.x-dev as 1.0",
         "hanafalah/puskesmas-asset": "1.x-dev as 1.0",
+        "hanafalah/module-monitoring": "1.x-dev as 1.0",
         "hanafalah/module-payment": "1.x-dev as 1.0",
         "hanafalah/module-card-identity": "1.x-dev as 1.0",
         "hanafalah/module-support": "1.x-dev as 1.0",
